refs #6634 fixed wrapping issue and changed email

--- a/wp-content/themes/u-design-child/style.css
+++ b/wp-content/themes/u-design-child/style.css
@@ -819,7 +819,7 @@ body{
 }
 
 #slide-3 #four-img-container img {
-	margin-right: 15px;
+	margin-right: 10px;
 }
 
 #slide-3 .img-description{
@@ -834,7 +834,7 @@ body{
 #slide-3 .img-description {
 	width: 226px;
 	float: left;
-	margin-right: 18px;
+	margin-right: 13px;
 	color: #FFFFFF;
 	font-size: 24px;
 	line-height: 30px;
@@ -853,7 +853,8 @@ body{
 }
 
 #slide-3 #three-img-container img {
-	margin-right: 130px;
+    margin-right: 60px;
+    margin-left: 60px;
 }
 
 #slide-3 #description-container-2 .img-description {
@@ -1153,7 +1154,7 @@ body{
 }
 
 #slide-8 h1 {
-	font-size: 30px !important;
+	font-size: 25px !important;
 	font-weight: 500;
 	line-height: 36px;
   display: inline;
